--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>com.alexrnv.multithreading</groupId>
     <artifactId>multithreading-benchmarks</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
     <modules>
         <module>primes</module>
         <module>primes-jmh</module>
+        <module>primes-jcstress</module>
     </modules>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.release>8</maven.compiler.release>
     </properties>
 
 </project>
