--- a/primes-jcstress/pom.xml
+++ b/primes-jcstress/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-Copyright (c) 2014, Oracle America, Inc.
+Copyright (c) 2017, Red Hat Inc.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -39,28 +39,26 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </parent>
 
     <groupId>com.alexrnv.multithreading</groupId>
-    <artifactId>primes-jmh</artifactId>
+    <artifactId>primes-jcstress</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>JMH benchmarks for "primes" module: Java</name>
+    <name>JCStress test sample</name>
 
     <!--
-       This is the demo/sample template build script for building Java benchmarks with JMH.
+       This is the demo/sample template build script for building concurrency tests with JCStress.
        Edit as needed.
     -->
 
+    <prerequisites>
+        <maven>3.2</maven>
+    </prerequisites>
+
     <dependencies>
         <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core</artifactId>
-            <version>${jmh.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-generator-annprocess</artifactId>
-            <version>${jmh.version}</version>
-            <scope>provided</scope>
+            <groupId>org.openjdk.jcstress</groupId>
+            <artifactId>jcstress-core</artifactId>
+            <version>${jcstress.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alexrnv.multithreading</groupId>
@@ -74,9 +72,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--
-            JMH version to use with this project.
+            jcstress version to use with this project.
           -->
-        <jmh.version>1.26</jmh.version>
+        <jcstress.version>0.7</jcstress.version>
 
         <!--
             Java source/target to use for compilation.
@@ -84,9 +82,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
         <javac.target>${maven.compiler.target}</javac.target>
 
         <!--
-            Name of the benchmark Uber-JAR to generate.
+            Name of the test Uber-JAR to generate.
           -->
-        <uberjar.name>benchmarks</uberjar.name>
+        <uberjar.name>jcstress</uberjar.name>
     </properties>
 
     <build>
@@ -101,12 +99,14 @@ THE POSSIBILITY OF SUCH DAMAGE.
                     <target>${javac.target}</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.1</version>
                 <executions>
                     <execution>
+                        <id>main</id>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
@@ -116,70 +116,18 @@ THE POSSIBILITY OF SUCH DAMAGE.
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.openjdk.jmh.Main</mainClass>
+                                    <mainClass>org.openjdk.jcstress.Main</mainClass>
                                 </transformer>
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/TestList</resource>
+                                </transformer>
                             </transformers>
-                            <filters>
-                                <filter>
-                                    <!--
-                                        Shading signed JARs will fail without this.
-                                        http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar
-                                    -->
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-clean-plugin</artifactId>
-                    <version>2.5</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.6</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.3</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.2.1</version>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.17</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
 </project>
